--- a/lab/templates/lab/pages/laudo_detalhes.html
+++ b/lab/templates/lab/pages/laudo_detalhes.html
@@ -42,35 +42,35 @@
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>Concentração em % de hemácias</strong></td>
-                                <td class="cell-black">{{ detected_image.concentracao_rbc }}</td>
+                                <td class="cell-black">{{ detected_image.concentracao_rbc }} %</td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>Concentração em % de leucócitos</strong></td>
-                                <td class="cell-black">{{ detected_image.concentracao_wbc }}</td>
+                                <td class="cell-black">{{ detected_image.concentracao_wbc }} %</td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>Concentração em % de plaquetas</strong></td>
-                                <td class="cell-black">{{ detected_image.concentracao_plaquetas }}</td>
+                                <td class="cell-black">{{ detected_image.concentracao_plaquetas }} %</td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>Concentração de leucócitos por hemácias</strong></td>
-                                <td class="cell-black">{{ detected_image.concentracao_wbc_rbc }}</td>
+                                <td class="cell-black">{{ detected_image.concentracao_wbc_rbc }} </td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>media do diametro hemacia</strong></td>
-                                <td class="cell-black">{{ detected_image.media_diam_rbc }}</td>
+                                <td class="cell-black">{{ detected_image.media_diam_rbc }}  µm</td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>media do diametro leucocitos</strong></td>
-                                <td class="cell-black">{{ detected_image.media_diam_wbc }}</td>
+                                <td class="cell-black">{{ detected_image.media_diam_wbc }} µm</td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>media do circunferencia hemacia</strong></td>
-                                <td class="cell-black">{{ detected_image.media_circun_rbc }}</td>
+                                <td class="cell-black">{{ detected_image.media_circun_rbc }}  µm²</td>
                             </tr>
                             <tr>
                                 <td class="cell-white"><strong>media do circunferencia hemacia</strong></td>
-                                <td class="cell-black">{{ detected_image.media_circun_wbc }}</td>
+                                <td class="cell-black">{{ detected_image.media_circun_wbc }} µm²</td>
                             </tr>
                         {% endfor %}
                     </table>
