--- a/lab/templates/lab/pages/laudo_detalhes.html
+++ b/lab/templates/lab/pages/laudo_detalhes.html
@@ -57,20 +57,20 @@
                                 <td class="cell-black">{{ detected_image.concentracao_wbc_rbc }} </td>
                             </tr>
                             <tr>
-                                <td class="cell-white"><strong>media do diametro hemacia</strong></td>
+                                <td class="cell-white"><strong>Média do diâmetro das hemácias</strong></td>
                                 <td class="cell-black">{{ detected_image.media_diam_rbc }}  µm</td>
                             </tr>
                             <tr>
-                                <td class="cell-white"><strong>media do diametro leucocitos</strong></td>
+                                <td class="cell-white"><strong>Média do diâmetro dos leucócitos</strong></td>
                                 <td class="cell-black">{{ detected_image.media_diam_wbc }} µm</td>
                             </tr>
                             <tr>
-                                <td class="cell-white"><strong>media do circunferencia hemacia</strong></td>
-                                <td class="cell-black">{{ detected_image.media_circun_rbc }}  µm²</td>
+                                <td class="cell-white"><strong>Média da circunferência das hemácias</strong></td>
+                                <td class="cell-black">{{ detected_image.media_circun_rbc }}  µm</td>
                             </tr>
                             <tr>
-                                <td class="cell-white"><strong>media do circunferencia hemacia</strong></td>
-                                <td class="cell-black">{{ detected_image.media_circun_wbc }} µm²</td>
+                                <td class="cell-white"><strong>Média da circunferência dos leucócitos</strong></td>
+                                <td class="cell-black">{{ detected_image.media_circun_wbc }} µm</td>
                             </tr>
                         {% endfor %}
                     </table>
