--- a/lab/templates/lab/pages/usuario_detalhes.html
+++ b/lab/templates/lab/pages/usuario_detalhes.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-user"></i>
             </h3>
         </div>
-        <div class="recipe recipe-list-item">
+        <div class="user-profile-details">
             <div class="recipe-content">
                 <p><strong>Nome:</strong> {{ profile_user.first_name }} {{ profile_user.last_name }}</p>
                 <p><strong>CPF:</strong> {{ profile_user.cpf }}</p>
