--- a/lab/templates/lab/pages/imagem_enviar.html
+++ b/lab/templates/lab/pages/imagem_enviar.html
@@ -1,6 +1,6 @@
 {% extends 'global/base_report.html' %}    
 
-{% block title %}Envio de laudo |{% endblock title %}
+{% block title %}Envio de imagem |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
