--- a/lab/templates/lab/pages/usuario_detalhes.html
+++ b/lab/templates/lab/pages/usuario_detalhes.html
@@ -16,7 +16,7 @@
             </h3>
         </div>
         <div class="user-profile-details">
-            <div class="recipe-content">
+            <div class="patient-content">
                 <p><strong>Nome:</strong> {{ profile_user.first_name }} {{ profile_user.last_name }}</p>
                 <p><strong>CPF:</strong> {{ profile_user.cpf }}</p>
                 <p><strong>Nascimento:</strong> {{ profile_user.birthday }}</p>
