--- a/lab/templates/lab/partials/user.html
+++ b/lab/templates/lab/partials/user.html
@@ -1,5 +1,5 @@
 <div class="recipe recipe-list-item">
-    <div class="recipe-content">    
+    <div class="patient-content">    
         <p><strong> Nome: </strong> {{ patient.first_name }} {{ patient.last_name }}</p>
         <p><strong> CPF: </strong> {{ patient.cpf }}</p>
         <p><strong> Nascimento: </strong>{{ patient.birthday }} </p>
