Deleting form and template not used

--- a/lab/templates/lab/pages/imagem_enviar.html
+++ b/lab/templates/lab/pages/imagem_enviar.html
@@ -6,6 +6,9 @@
 {% include 'global/partials/messages.html' %}
 <div class="main-content">
     <h2 class="teste-home">Envie a imagem microscópica com os seguintes dados</h2>
+    <!--<div id="loading-overlay">
+        <div class="loader"></div>
+    </div>-->
     {% include "global/partials/search_envio.html" %}
     {% include "global/partials/form_envio.html" %}
 </div>
