--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -86,140 +86,15 @@ h5 {
     font-family: var(--font-headings)
 }
 
-
-
-                    /*HOME*/
-                    /* TESTE dos h1 que estão no lab*/
-.teste-home {
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    margin-bottom: 3rem;     
+.main-content-container {
+    min-height: 38rem;
 }
-.teste-home .user-profile-name {
-    display: inline;
-    color: rgb(142, 120, 221);
-    font-size: 3rem;
-    margin: 0 0.3rem;
-}
-
- 
-
-
-                    /*  HEADER  */          
-.main-header-container {
-    background-color: rgba(69, 143, 255, 1);
-}
-.main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.6rem;
-}
-.container {
-    max-width: 144rem;
-}
-.image-logo {
-    width: 143.5px;
-    height: 88.5px;
-    margin-left: 6rem;
-    margin-right: 35rem;
-}
-.image-title {
-    width: 201px;
-    height: 42px;
-}
-.logo-link {
-    text-decoration: none;
-    display: flex;
-    margin-top: 0.9rem;
-}
-.logo-link .bx {
-    margin-left: 0.4rem;
-    font-size: 3.4rem;
-    color: rgb(255, 255, 255);
-}
-.main-logo {
-    font-size: 4rem;
-    color: white;
-    text-decoration: none;
-    margin-left: auto;
-}
-.bx .bxs-donate-blood {
-    margin-right: 9rem;
-    margin-bottom: 0rem;
-    font-size: 30rem;
-}
-.hello-user{
-    color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center ; 
-    margin-left: auto;
-    margin-right: 2rem;
-   }
-.hello-user .hello {
-    white-space: nowrap;
-    color: var(--color-gray-9);
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.hello-user .name {
-    font-weight: 500;
-}
-
-
-
-                    /*  SEARCH DE PESQUISA  */
-.search-form {
-    border: .2rem solid var(--color-primary-dark);
-    max-width: 64rem;
-    margin: 0 auto;
-    margin-top: 2rem;
-    border-radius: .4rem;
-    position: relative;
-    transition: all 300ms ease-in-out;
-}
-.search-input,
-.search-button {
-    border: none;
-    background: none;
-    outline: none;
-    padding: 1rem;
-    transition: all 300ms ease-in-out;
-}
-.search-input {
-    width: 100%;
-    padding-right: 3rem;
-}
-.search-button {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.search-button:hover {
-    cursor: pointer;
-}
-.search-button:focus {
-    outline: 1px solid var(--color-primary);
-    background: rgba(0, 0, 0, .05);
-}
-.search-form:focus-within {
-    border-color: var(--color-primary);
-    background: var(--color-white);
-}
-.search-form:focus-within .search-button {
-    color: var(--color-primary);
-}
-
-
-
 
                     /*  TUDO DO PROJETO PASSADO  */
 .main-content {
     padding-top: 0;
     margin: 3rem; 
-    margin-bottom: 6rem; 
+    padding-bottom: 2.5rem;
 }
 .main-content-login {
     padding-top: 0;
@@ -315,6 +190,129 @@ h5 {
     padding: var(--spacing-gutter-medium);
 }
 
+/*HOME*/
+/* TESTE dos h1 que estão no lab*/
+.teste-home {
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    margin-bottom: 3rem;     
+}
+.teste-home .user-profile-name {
+    display: inline;
+    color: rgb(142, 120, 221);
+    font-size: 3rem;
+    margin: 0 0.3rem;
+}
+
+    
+
+
+                    /*  HEADER  */          
+.main-header-container {
+    background-color: rgba(69, 143, 255, 1);
+}
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.6rem;
+}
+.container {
+    max-width: 144rem;
+}
+.image-logo {
+    width: 143.5px;
+    height: 88.5px;
+    margin-left: 6rem;
+    margin-right: 35rem;
+}
+.image-title {
+    width: 201px;
+    height: 42px;
+}
+.logo-link {
+    text-decoration: none;
+    display: flex;
+    margin-top: 0.9rem;
+}
+.logo-link .bx {
+    margin-left: 0.4rem;
+    font-size: 3.4rem;
+    color: rgb(255, 255, 255);
+}
+.main-logo {
+    font-size: 4rem;
+    color: white;
+    text-decoration: none;
+    margin-left: auto;
+}
+.bx .bxs-donate-blood {
+    margin-right: 9rem;
+    margin-bottom: 0rem;
+    font-size: 30rem;
+}
+.hello-user{
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center ; 
+    margin-left: auto;
+    margin-right: 2rem;
+    }
+.hello-user .hello {
+    white-space: nowrap;
+    color: var(--color-gray-9);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.hello-user .name {
+    font-weight: 500;
+}
+
+
+
+                    /*  SEARCH DE PESQUISA  */
+.search-form {
+    border: .2rem solid var(--color-primary-dark);
+    max-width: 64rem;
+    margin: 0 auto;
+    margin-top: 2rem;
+    border-radius: .4rem;
+    position: relative;
+    transition: all 300ms ease-in-out;
+}
+.search-input,
+.search-button {
+    border: none;
+    background: none;
+    outline: none;
+    padding: 1rem;
+    transition: all 300ms ease-in-out;
+}
+.search-input {
+    width: 100%;
+    padding-right: 3rem;
+}
+.search-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.search-button:hover {
+    cursor: pointer;
+}
+.search-button:focus {
+    outline: 1px solid var(--color-primary);
+    background: rgba(0, 0, 0, .05);
+}
+.search-form:focus-within {
+    border-color: var(--color-primary);
+    background: var(--color-white);
+}
+.search-form:focus-within .search-button {
+    color: var(--color-primary);
+}
 
 
                     /* USER - DETAILS*/
@@ -593,22 +591,23 @@ h5 {
                     /*  FOOTER */
 .main-footer {
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: space-between;
     background-color: rgba(69, 143, 255, 1);
     padding: var(--spacing-gutter-large);
-    position: fixed;
-    bottom: 0;
     width: 100%;
+    bottom: 0;
 }
 .main-footer-other-base {
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: space-between;
     background-color: rgba(69, 143, 255, 1);
     padding: var(--spacing-gutter-large);
-    bottom: 0;
     width: 100%;
+    bottom: 0;
 }
 .main-footer a {
     color: var(--color-white);
