--- a/authors/templates/authors/pages/register_view_patient.html
+++ b/authors/templates/authors/pages/register_view_patient.html
@@ -1,4 +1,4 @@
-{% extends 'global/base_register.html' %}
+{% extends 'global/base.html' %}
 
 {% block title %}Registrar | {% endblock title %}
 
@@ -6,9 +6,9 @@
 
   <div class="main-content center container">
     <h2>Registrar usuário paciente</h2>
-  </div>
+  </div>  
 
-  {% include 'global/partials/messages.html' %}  
   {% include 'global/partials/form.html' %}
-
+  
 {% endblock content %}
+
