--- a/authors/templates/authors/pages/register_view_tec.html
+++ b/authors/templates/authors/pages/register_view_tec.html
@@ -1,4 +1,4 @@
-{% extends 'global/base_register.html' %}
+{% extends 'global/base.html' %}
 
 {% block title %}Registrar | {% endblock title %}
 
@@ -8,7 +8,6 @@
     <h2>Registrar usuário técnico</h2>
   </div>
 
-  {% include 'global/partials/messages.html' %}  
   {% include 'global/partials/form.html' %}
 
 {% endblock content %}
