--- a/lab/templates/lab/pages/laudo_detalhes.html
+++ b/lab/templates/lab/pages/laudo_detalhes.html
@@ -1,4 +1,4 @@
-{% extends "global/base_report.html" %}
+{% extends "global/base.html" %}
 {% block title %}Laudo |{% endblock title %}
 
 {% block content %}
@@ -6,7 +6,7 @@
     <div class="main-content center">
         <div class="report-detail-container">
             
-            <h3 class="teste-home">Informações do laudo</h3>
+            <h3 class="personal-heading">Informações do laudo</h3>
 
             <div class="report-description-container">
                 <div class="table-container">
