--- a/lab/templates/lab/pages/pesquisa.html
+++ b/lab/templates/lab/pages/pesquisa.html
@@ -1,10 +1,10 @@
-{% extends 'global/base_search_page.html' %}    
+{% extends 'global/base.html' %}    
 
 {% block title %}{{ page_title }}{% endblock title %}
 
 {% block content %}
+{%include 'global/partials/search.html'%}
     <div class="main-content main-content-list container">
-
         {% if search_term %}
             {% if patients %}
                 {% for patient in patients %}
@@ -20,5 +20,7 @@
                 {% include 'lab/partials/user.html' %}
             {% endfor %}
         {% endif %}
+        
     </div>
+    {% include 'global/partials/pagination.html' %}
 {% endblock content %}
