--- a/lab/templates/lab/pages/usuario_detalhes.html
+++ b/lab/templates/lab/pages/usuario_detalhes.html
@@ -1,13 +1,13 @@
-{% extends 'global/base_user.html' %}    
+{% extends 'global/base.html' %}    
 {% load permission_tags %}
 
 {% block title %}Perfil |{% endblock title %}
 
 {% block content %}
-{% include 'global/partials/messages.html' %}
-    <div class="main-content">
+{%include 'global/partials/search.html'%}
+    <div class="main-content container">
         <div class="profile-from-name ">
-            <h3 class="teste-home">
+            <h3 class="personal-heading">
                 Perfil de 
                 <span class="user-profile-name">
                     {{ profile_user.first_name}} {{profile_user.last_name}}
