--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -57,11 +57,9 @@
 }
 
 html {
+    height: 100%;
+    min-height: 100%;
     font-size: 62%;
-}
-
-html, body {
-    height: 100%; 
 }
 
 body {
@@ -69,8 +67,14 @@ body {
     font-family: var(--font-primary);
     background-color: var(--color-gray-1);
     color: var(--color-dark-text);
-    height: 100%;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+.container {
+    max-width: 144rem;
+    margin: 0 auto;
 }
 
 body, h1, h2, h3, h4, h5, h6, p {
@@ -86,9 +90,6 @@ h5 {
     font-family: var(--font-headings)
 }
 
-.main-content-container {
-    min-height: 38rem;
-}
 
                     /*  TUDO DO PROJETO PASSADO  */
 .main-content {
@@ -192,21 +193,24 @@ h5 {
 
 /*HOME*/
 /* TESTE dos h1 que estão no lab*/
-.teste-home {
+.personal-heading {
     margin: 0 auto;
     align-items: center;
     justify-content: center;
     width: fit-content;
-    margin-bottom: 3rem;     
+    margin-bottom: 2rem;
 }
-.teste-home .user-profile-name {
+.personal-heading .user-profile-name {
     display: inline;
     color: rgb(142, 120, 221);
     font-size: 3rem;
     margin: 0 0.3rem;
 }
 
-    
+.personal-p-tag {
+    margin-bottom: 4rem;
+}
+
 
 
                     /*  HEADER  */          
@@ -219,9 +223,7 @@ h5 {
     align-items: center;
     padding: 0.6rem;
 }
-.container {
-    max-width: 144rem;
-}
+
 .image-logo {
     width: 143.5px;
     height: 88.5px;
@@ -353,7 +355,7 @@ h5 {
     margin-bottom: 2rem;
     border-radius: 1rem;
 }           
-.profile-from-name .teste-home {
+.profile-from-name .personal-heading {
     color: white;
 }
 .btn-access .bx {
@@ -589,7 +591,7 @@ h5 {
     list-style-type: none;
 }
                     /*  FOOTER */
-.main-footer {
+/*.main-footer {
     display: flex;
     position: relative;
     align-items: center;
@@ -598,7 +600,22 @@ h5 {
     padding: var(--spacing-gutter-large);
     width: 100%;
     bottom: 0;
+}*/
+
+/*TESTE*/
+.main-footer {
+    width: 100%;
+    background-color: rgba(69, 143, 255, 1);
+    padding: var(--spacing-gutter-large);
+    margin-top: auto;
 }
+.main-footer-content {
+    display: flex;
+    justify-content: space-between;
+}
+/*FIM DE TESTE*/
+
+
 .main-footer-other-base {
     display: flex;
     position: relative;
