--- a/base_templates/global/partials/footer.html
+++ b/base_templates/global/partials/footer.html
@@ -1,9 +1,11 @@
 <footer class="main-footer">
-  <div class="developer">
-    <a href="https://www.linkedin.com/in/heliel-souza/" target="_blank" rel="noreferrer noopener">By Heliel Souza</a>
-  </div>
+  <div class="main-footer-content">
+    <div class="developer">
+      <a href="https://www.linkedin.com/in/heliel-souza/" target="_blank" rel="noreferrer noopener">By Heliel Souza</a>
+    </div>
 
-  <div class="powered">
-    <a href="https://www.djangoproject.com/" target="_blank" rel="noreferrer noopener">Powered by Django</a>
+    <div class="powered">
+      <a href="https://www.djangoproject.com/" target="_blank" rel="noreferrer noopener">Powered by Django</a>
+    </div>
   </div>
 </footer>
