--- a/lab/templates/lab/pages/home.html
+++ b/lab/templates/lab/pages/home.html
@@ -5,10 +5,11 @@
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content container">
-        <h1 class="personal-heading">Olá,  {{ user.username }} </h1>
-        <p class="center personal-p-tag">Seja bem vindo(a), sinta se a vontade</p>
-        
-        <h2>O que é esse sistema e para quê serve?</h2>
+        <div class="home-text-container">
+            <h1 class="personal-heading">Olá,  {{ user.username }} </h1>
+            <p class="center personal-p-tag">Seja bem vindo(a), sinta se a vontade</p>
+            
+            <h2>O que é esse sistema e para quê serve?</h2>
             <br>
                 <p>Esse sistema é pra ser usado em laboratório, tendo várias funcionalidades, como cadastro, login, alteração de dados e o principal: <strong>Geração de laudo hematológicos
                     após processamento de imagens sanguíneas microscópicas</strong>.
@@ -17,9 +18,17 @@
                 </p>
             <br>
             <br>
-        <h2>Quem desenvolveu o sistema?</h2>
+            <h2>Quem desenvolveu o sistema?</h2>
             <br>
-            <img src="/media/lab/logo/heliel.png" class="img-eu" alt="titulo" class="image-title">  
+        </div>
+
+
+        <div class="home-image-container">
+            <img src="/media/lab/logo/heliel.png" alt="titulo">  
+        </div>
+
+
+        <div class="home-text-container">
             <br>
             <br>
                 <p>Esse sistema foi desenvolvido pelo jovem estudante de análise e desenlvovimento de sistemas <strong>Heliel Souza Lima</strong> de 22 anos, na instituição de ensino COTUCA.</p>
@@ -28,7 +37,7 @@
                 </p>
             <br>
             <br>
-        <h2>Como o projeto foi desenvolvido?</h2>
+            <h2>Como o projeto foi desenvolvido?</h2>
             <br>
                 <p>O projeto majoritariamente foi desenvolvido no Framework <strong>Django</strong>, framework desenvolvido em python que permite a criação de sistemas rápidos e escaláveis.
                 Além disso, foram usadas tecnologias como <strong> HTML5, CSS3 e JavaScript</strong> para algumas estilizações e detalhes da estrutura da página. outros frameworks, linguagens e algoritmos
@@ -36,27 +45,25 @@
                 </p>
             <br>
             <br>
-        <h2>
-            Como funciona esse sistema?
-        </h2>
-        <br>
+            <h2>
+                Como funciona esse sistema?
+            </h2>
+            <br>
             Esse sistema tem 3 tipos de usuários a serem cadastrados: <br><br>
             <strong>Técnico</strong>: responsável por enviar imagens ao sistema e realizar a geração dos laudos de imagens sanguíneas. <br>
             <strong>Recepcionista</strong>: Responsável pelo cadastro de pacientes, alteração de dados, consulta de laudos gerados. <br>
             <strong>Paciente</strong>: Paciente é o usuário que terá seus dados pessoais coletados para seu cadastro e terá um laudo gerado por conta de seu sangue.
-        <br>
-        <br>
-        <p>Existe uma inteligência artificial de detecção de objetos por trás desse sistema, onde um há um peso treinado com mais de 400 imagens sanguíneas
+            <br>
+            <br>
+            <p>Existe uma inteligência artificial de detecção de objetos por trás desse sistema, onde um há um peso treinado com mais de 400 imagens sanguíneas
             de um data-set, com um algoritmo de visão computacional de rede neural convolucional (RNN) chamado <strong> YOLO </strong>(You Once Look Once).
             <br>
             <br>
             Esse modelo levou mais de 14 horas para ser trainado no google Colab, onde todas as imagens do data-set foram rotuladas manualmente, para que a máquina aprendesse
             a identificar padrões e buscar melhor sua taxa de confiança, até gerar o melhor peso pré-trainado para ser ajustado e utilizado como inferência nesse sistema.
-
-            
-        </p>
-        
+        </div>
     </div>
+   
 {% endblock content %}
 
 
