--- a/base_templates/global/partials/search_report.html
+++ b/base_templates/global/partials/search_report.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="search-container-report">
+<div class="search-container-report container">
     <div class="search-fst-box-report">
         <form action="{% url 'lab:laudo_consultar' %}" method="GET" class="search-form">
             <input 
@@ -7,6 +7,7 @@
                 name="q" value="{{ search_term }}"  
                 placeholder="Digite o nome ou CPF para filtrar a busca"
             >
+            
         </form>
     </div>
 
@@ -14,15 +15,15 @@
         <div class="date-box">
             <form action="{% url 'lab:laudo_consultar' %}" method="GET" class="date-search-form">
                 <label for="search_date">Data:</label>
-                <input type="date" id="search_date" name="search_date">
+                <input 
+                    type="date" id="search_date" 
+                    name="search_date"
+                >               
             </form> 
         </div>
-
-        <div class="button-search-report">
-            <button type="button" class="search-button" id="combined-search-button">
-                <i class="fas fa-search"></i> Pesquisar
-            </button>
-        </div>
     </div>
+    <button type="submit" class="search-button" id="combined-search-button">
+        <i class="fas fa-search"></i> Pesquisar
+    </button>
 </div>
 <script src="{% static 'global/js/combined_search.js' %}"></script>
